--- a/org.csstudio.archive.rdb/pom.xml
+++ b/org.csstudio.archive.rdb/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>archive-plugins</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>org.csstudio.archive.rdb</artifactId>
+  <artifactId>org.csstudio.archive.influxdb</artifactId>
   <version>4.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
