--- a/org.csstudio.archive.writer.influxdb/pom.xml
+++ b/org.csstudio.archive.writer.influxdb/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>archive-plugins</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>org.csstudio.archive.writer.rdb</artifactId>
+  <artifactId>org.csstudio.archive.writer.influxdb</artifactId>
   <version>3.2.14-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
