--- a/org.csstudio.archive.writer.influxdb/pom.xml
+++ b/org.csstudio.archive.writer.influxdb/pom.xml
@@ -4,10 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.csstudio</groupId>
-    <artifactId>archive-plugins</artifactId>
+    <artifactId>archive-influxdb</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>org.csstudio.archive.writer.influxdb</artifactId>
-  <version>3.2.14-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
