Archive Reader test for basic info is working

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
   <artifactId>archive-influxdb</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+    <properties>
+    <!-- VERSIONS -->
+    <tycho.version>0.23.1</tycho.version>
+    <tycho-extras.version>${tycho.version}</tycho-extras.version>
+    </properties>
   <modules>
     <module>org.csstudio.archive.influxdb</module>
     <module>org.csstudio.archive.reader.influxdb</module>
@@ -11,4 +16,91 @@
     <module>org.csstudio.archive.writer.influxdb</module>
     <module>org.csstudio.archive.writer.influxdb.test</module>
   </modules>
+  <build>
+    <!-- PLUGIN MANAGEMENT -->
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-packaging-plugin</artifactId>
+          <version>${tycho.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.eclipse.tycho.extras</groupId>
+              <artifactId>tycho-buildtimestamp-jgit</artifactId>
+              <version>${tycho-extras.version}</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+      </plugins> 
+    </pluginManagement>
+
+    <!--
+      PLUGIN CONFIGURATION
+    -->
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-compiler-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <!-- https://github.com/kasemir/org.csstudio.display.builder/pull/163 -->
+          <compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
+          <encoding>UTF-8</encoding>
+          <extraClasspathElements>
+            <!-- Add jfxswt.jar to avoid error w/ missing FXCanvas -->
+            <extraClasspathElement>
+              <groupId>com.oracle</groupId>
+              <artifactId>javafx</artifactId>
+              <version>8.0.0-SNAPSHOT</version>
+              <systemPath>${java.home}/lib/jfxswt.jar</systemPath>
+              <scope>system</scope>
+            </extraClasspathElement>
+          </extraClasspathElements>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-packaging-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <!--Some project include things that no longer exists. This should be fixed, but for now this parameter lets the build continue.-->
+          <strictBinIncludes>false</strictBinIncludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-source-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <executions>
+          <execution>
+            <id>plugin-source</id>
+            <goals>
+              <goal>plugin-source</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-surefire-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+<!--
+          <skipTests>${skipTests}</skipTests>
+-->
+          <!--Some tests fail right now -->
+          <testFailureIgnore>true</testFailureIgnore>
+          <failIfNoTests>true</failIfNoTests>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
