--- a/org.csstudio.archive.influxdb/preferences.ini
+++ b/org.csstudio.archive.influxdb/preferences.ini
@@ -1,8 +1,8 @@
-# Default RDB archive settings.
+# Default InfluxDB archive settings.
 # plugin_preferences.ini can override
 # @author Kay Kasemir
 
-# RDB URL for archived data
+# InfluxDB URL for archived data
 # If your site uses the same settings everywhere, you
 # can specify them here.
 # If you switch between production and test setups, better set these
@@ -11,40 +11,14 @@
 # of the ArchiveEngine etc., or use the command-line
 # arguments of the products.
 #
-# Oracle example
-# url=jdbc:oracle:thin:user/password@//172.31.73.122:1521/prod
-#
-# MySQL example
-url=jdbc:mysql://localhost/archive?rewriteBatchedStatements=true
+url=http://localhost:8086
 
-# RDB user and password
+# InfluxDB user and password
 # Some applications also provide command-line option to override.
 user=archive
 password=$archive
 
-# Schema name. Used with an added "." as prefix for table names.
-# For now this is only used with Oracle URLs and ignored for MySQL
-schema=
+# Currently unused. InfluxDB Java client does not seem to have configurable timeout
+# timeout_secs=0
 
-# Timeout [seconds] for certain SQL queries
-# Fundamentally, the SQL queries for data take as long as they take
-# and any artificial timeout just breaks queries that would otherwise
-# have returned OK  few seconds after the timeout.
-# We've seen Oracle lockups, though, that caused JDBC to hang forever
-# because the SAMPLE table was locked. No error/exception, just hanging.
-# A timeout is used for operations other than getting the actual data,
-# for example the channel id-by-name query which _should_ return within
-# a shot time, to catch that type of RDB lockup.
-# timeout_secs=120
-# With PostgreSQL, the setQueryTimeout API is not implemented,
-# and calling it results in an exception.
-# Setting the timeout to 0 disables calls to setQueryTimeout.
-timeout_secs=0
-
-# Use a blob to read/write array samples?
-#
-# The original SAMPLE table did not contain an ARRAY_VAL column
-# for the array blob data, but instead used a separate ARRAY_VAL table.
-# When running against an old database, this parameter must be set to false. 
-use_array_blob=true
 
