--- a/org.csstudio.archive.writer.influxdb/pom.xml
+++ b/org.csstudio.archive.writer.influxdb/pom.xml
@@ -9,4 +9,5 @@
   </parent>
   <artifactId>org.csstudio.archive.writer.influxdb</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <packaging>eclipse-plugin</packaging>
 </project>
