Renamed RDB classes to InfluxDB. Removed all errors in ArchiveWriter.

--- a/org.csstudio.archive.writer.influxdb/plugin.xml
+++ b/org.csstudio.archive.writer.influxdb/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.csstudio.archive.writer.ArchiveWriter">
       <ArchiveWriter
-            class="org.csstudio.archive.writer.influxdb.RDBArchiveWriter">
+            class="org.csstudio.archive.writer.influxdb.InfluxDBArchiveWriter">
       </ArchiveWriter>
    </extension>
 
