All code in place for reading chunks. Need more testing.

--- a/org.csstudio.archive.influxdb/preferences.ini
+++ b/org.csstudio.archive.influxdb/preferences.ini
@@ -18,7 +18,7 @@ url=http://localhost:8086
 user=archive
 password=$archive
 
-# Currently unused. InfluxDB Java client does not seem to have configurable timeout
-# timeout_secs=0
+# Timeout to use when waiting for chunks of data to arrive
+timeout_secs=10
 
 
