Added initial commit of influxdb config test

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     </properties>
   <modules>
     <module>org.csstudio.archive.influxdb</module>
+    <module>org.csstudio.archive.config.influxdb</module>
+    <module>org.csstudio.archive.config.influxdb.text</module>
     <module>org.csstudio.archive.reader.influxdb</module>
     <module>org.csstudio.archive.reader.influxdb.test</module>
     <module>org.csstudio.archive.writer.influxdb</module>
