--- a/org.csstudio.archive.config.influxdb/pom.xml
+++ b/org.csstudio.archive.config.influxdb/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.csstudio</groupId>
-    <artifactId>archive-plugins</artifactId>
+    <artifactId>archive-influxdb</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>org.csstudio.archive.config.influxdb</artifactId>
