--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>org.csstudio.archive.config.influxdb</module>
     <module>org.csstudio.archive.config.influxdb.text</module>
     <module>org.csstudio.archive.reader.influxdb</module>
+    <module>org.csstudio.archive.reader.influxdb.feature</module>
     <module>org.csstudio.archive.reader.influxdb.test</module>
     <module>org.csstudio.archive.writer.influxdb</module>
     <module>org.csstudio.archive.writer.influxdb.test</module>
