--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <modules>
     <module>org.csstudio.archive.influxdb</module>
     <module>org.csstudio.archive.config.influxdb</module>
-    <module>org.csstudio.archive.config.influxdb.text</module>
+    <module>org.csstudio.archive.config.influxdb.test</module>
     <module>org.csstudio.archive.reader.influxdb</module>
     <module>org.csstudio.archive.reader.influxdb.feature</module>
     <module>org.csstudio.archive.reader.influxdb.test</module>
