Now it builds using maven

--- a/org.csstudio.archive.influxdb/build.properties
+++ b/org.csstudio.archive.influxdb/build.properties
@@ -6,5 +6,5 @@ bin.includes = .,\
                plugin.xml,\
                tocChangelog.xml,\
                ChangeLog.html
-src.includes = dbd/,\
+src.includes = dbdocs/,\
                preferences.ini
