--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,28 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.csstudio</groupId>
   <artifactId>archive-influxdb</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>4.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-    <properties>
+  <properties>
     <!-- VERSIONS -->
     <tycho.version>0.23.1</tycho.version>
     <tycho-extras.version>${tycho.version}</tycho-extras.version>
-    </properties>
+  </properties>
+
+  <repositories>
+    <repository>
+      <id>influx-plugin</id>
+      <url>http://ctrl-ci.sns.gov/snapshot/influxdb-java-snapshot/repository/</url>
+      <layout>p2</layout>
+    </repository>
+
+    <repository>
+      <id>csstudio-composite-repo</id>
+      <url>file:${csstudio.composite.repo}</url>
+      <layout>p2</layout>
+    </repository>
+  </repositories>
+  
   <modules>
     <module>org.csstudio.archive.influxdb</module>
     <module>org.csstudio.archive.config.influxdb</module>
