--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>org.csstudio.archive.config.influxdb</module>
     <module>org.csstudio.archive.config.influxdb.test</module>
     <module>org.csstudio.archive.reader.influxdb</module>
+    <module>org.csstudio.archive.reader.influxdb.raw</module>
     <module>org.csstudio.archive.reader.influxdb.feature</module>
     <module>org.csstudio.archive.reader.influxdb.test</module>
     <module>org.csstudio.archive.writer.influxdb</module>
