--- a/org.csstudio.archive.reader.influxdb/build.properties
+++ b/org.csstudio.archive.reader.influxdb/build.properties
@@ -2,7 +2,5 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               preferences.ini
-src.includes = preferences.ini
+               plugin.xml
 
