Cleanup influxdb config plugin

--- a/org.csstudio.archive.influxdb/preferences.ini
+++ b/org.csstudio.archive.influxdb/preferences.ini
@@ -13,6 +13,11 @@
 #
 url=http://localhost:8086
 
+# To avoid setting the InfluxDB password in here, it can be configured
+# on the command line:
+#
+# ArchiveConfigTool -set_password org.csstudio.archive.influxdb/password=secret_password
+
 # InfluxDB user and password
 # Some applications also provide command-line option to override.
 user=archive
