--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 
     <!-- Features -->
     <module>org.csstudio.archive.reader.influxdb.feature</module>
+    <module>org.csstudio.archive.influxdb.tools.feature</module>
 
     <!-- Repository -->
     <module>repository</module>
