--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>archive-influxdb</artifactId>
     <version>4.2.0-SNAPSHOT</version>
   </parent>  
-  <artifactId>repository</artifactId>
+  <artifactId>repository-influxdb</artifactId>
   <packaging>eclipse-repository</packaging>
   <build>
     <plugins>
