--- a/org.csstudio.archive.config.xml.test/pom.xml
+++ b/org.csstudio.archive.config.xml.test/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>archive-influxdb</artifactId>
     <version>4.2.0-SNAPSHOT</version>
   </parent>
-  <artifactId>org.csstudio.archive.config.influxdb.test</artifactId>
+  <artifactId>org.csstudio.archive.config.xml.test</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
 </project>
