--- a/org.csstudio.archive.config.xml/pom.xml
+++ b/org.csstudio.archive.config.xml/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>archive-influxdb</artifactId>
     <version>4.2.0-SNAPSHOT</version>
   </parent>
-  <artifactId>org.csstudio.archive.config.influxdb</artifactId>
+  <artifactId>org.csstudio.archive.config.xml</artifactId>
   <version>4.2.1-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
