Renamed xml config classes from influxdb

--- a/org.csstudio.archive.config.xml/plugin.xml
+++ b/org.csstudio.archive.config.xml/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.csstudio.archive.config.ArchiveConfig">
       <ArchiveConfig
-            class="org.csstudio.archive.config.xml.InfluxDBArchiveConfig">
+            class="org.csstudio.archive.config.xml.XMLArchiveConfig">
       </ArchiveConfig>
    </extension>
 </plugin>
