--- a/org.csstudio.archive.config.xml/preferences.ini
+++ b/org.csstudio.archive.config.xml/preferences.ini
@@ -2,3 +2,4 @@
 # -set_pref org.csstudio.archive.influxdb/config_path=/etc/css/archive_engine/xml
 
 config_path=/etc/css/conf
+engine_url=http://localhost:4186
