Moved generate application to new package

--- a/org.csstudio.archive.config.influxdb/plugin.xml
+++ b/org.csstudio.archive.config.influxdb/plugin.xml
@@ -15,7 +15,7 @@
             thread="main"
             visible="true">
          <run
-               class="org.csstudio.archive.config.influxdb.GenApp">
+               class="org.csstudio.archive.config.influxdb.generate.GenApp">
          </run>
       </application>
    </extension>
