--- a/org.csstudio.archive.config.xml/preferences.ini
+++ b/org.csstudio.archive.config.xml/preferences.ini
@@ -1,5 +1,5 @@
 # When starting the Archive Engine:
-# -set_pref org.csstudio.archive.influxdb/config_path=/etc/css/archive_engine/xml
+# -set_pref org.csstudio.archive.config.xml/config_path=/etc/css/archive_engine/xml
 
 config_path=/etc/css/conf
 engine_url=http://localhost:4186
