Added options to control influx database names through preferences

--- a/org.csstudio.archive.influxdb/preferences.ini
+++ b/org.csstudio.archive.influxdb/preferences.ini
@@ -26,4 +26,9 @@ password=$archive
 # Timeout to use when waiting for chunks of data to arrive
 timeout_secs=10
 
+# Default database names for data and metadata
+default_db=channel_data
+default_meta_db=channel_meta
 
+# Prefix string for database names
+db_prefix=
