Main loop with time limits running in data generator

--- a/org.csstudio.archive.config.influxdb/plugin.xml
+++ b/org.csstudio.archive.config.influxdb/plugin.xml
@@ -20,7 +20,7 @@
       </application>
    </extension>
    <extension
-         id="product"
+         id="influxdb-generate"
          point="org.eclipse.core.runtime.products">
       <product
             application="org.csstudio.archive.config.influxdb.genapp"
